--- a/presentation.html
+++ b/presentation.html
@@ -378,7 +378,7 @@ seq</pre>
 
 <p>Instead of \(k\)-mers (MUSCLE), we can encounter \(k\)-tuples (CLUSTALW) or anchors (DIALIGN). They mean mostly the same thing.</p>
 
-<p>k-mers are very common in bioinformatics and are utilized by the search methods (e.g., BLASR) and alignment-free phylogenetic methods.</p>
+<p>k-mers are very common in bioinformatics and are utilized by the search methods (e.g., BLAST) and alignment-free phylogenetic methods.</p>
 
 </article></slide><slide class=""><hgroup><h2>Refinement</h2></hgroup><article  id="refinement">
 
